2003-11-19 Damien Sandras  <dsandras@seconix.com>

	* autogen.sh: New compliant autogen.sh script. Closes #127352.
	
	* src/druid.cpp: Do not apply changes when closing the
	window using the window manager.
	
	* src/gdkvideoio.cpp, src/gdkvideoio.h: Added frameStore pointer
	as it is not part anymore of the upper level classes.
	
	* src/gnomemeeting.cpp: Remove the standard OpenH323 FakeVideo 
	plugin from the list.
	
	* src/sound_handling.cpp: Fixed bug discovered by Johnny: crash
	when doing the audio test while devices are busy. Do not delete
	the object from inside itself, it is done automatically when exiting
	or when doing another test.
	
	* src/vfakeio.cpp, src/vfakeio.h: Made a plugin of the old
	FakeIO device. Not fully functionnal yet.
	
	* src/videograbber.cpp: Cleaned approach thanks to the new
	plugin. Use the new plugin if the opening of the device fails.
	
2003-11-18 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Put an explicit request on libxml 2.6.

	* lib/xdap/xdap.c: "Ported" to 2.6 API.

	* src/main_window.cpp: Fixed dialpad when not being in a call.
	
2003-11-18 Damien Sandras  <dsandras@seconix.com>

	* src/gdkvideoio.h, src/vfakeio.cpp, src/vfakeio.h: Added what's
	required to work with latest CVS.
	
2003-11-17 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Moved QUICKNET settings in the
	AUDIO_DEVICES settings.
	
	* src/common.h, src/config.cpp, src/lid.cpp: See above.

	* src/config.cpp: enable_microtelco_changed_nt : Do not
	update the widgets when triggered as they are temporarily
	removed.
	
	* src/druid.cpp: Display the right callto at the end of the setup.
	Set the correct email in the gconf settings even though the user
	chose not to register to ILS.
	
2003-11-16 Damien Sandras  <dsandras@seconix.com>

	* configure.in, gnomemeeting.schemas.in.in, src/common.h,
	src/config.cpp, src/connection.cpp, src/druid.cpp, src/endpoint.cpp,