@@ -1,4 +1,8 @@
-2003-11-19 Damien Sandras  <dsandras@seconix.com>
+2003-11-20 Damien Sandras  <dsandras@seconix.com>
+
+	* src/vfakeio.h, src/videograbber.cpp: Changed plugin name.
+	
+2003-11-20 Damien Sandras  <dsandras@seconix.com>
 
 	* autogen.sh: New compliant autogen.sh script. Closes #127352.
 	
